processed/gerrit/txt_full/64381.txt
Change:     64381
Subject:    LU-6142 utils: Fix compile warning in lfs_project
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/64381
Change-Id:  Ic09e5a70e9651ea6855d297c83932755a44e848e
Project:    fs/lustre-release
Branch:     master
Status:     NEW
Owner:      Arshad Hussain
Created:    2026-03-05 11:02:16.000000000
Updated:    2026-04-25 07:58:48.000000000
Patch Set:  1
Insertions: +2
Deletions:  -4
Comments:   5 (0 unresolved)

--- Labels ---
  Code-Review: Andreas Dilger: +1; Chakshu Kansal: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Andreas Dilger, James Simmons, Shaun Tancheff, Timothy Day, Chakshu Kansal

--- Commit Message ---
LU-6142 utils: Fix compile warning in lfs_project

In strncpy(), providing size less than destination
will leave last byte untouch. This is what the
compiler is complaining about. Since, strncpy()
gurantees NUL termination for anyting after length
of source. The correct usage is to provide the
full length of destination.

$ uname -r
6.12.0-124.20.1.el10_1.x86_64

$ gcc --version
gcc (GCC) 14.3.1 20250617

lfs_project.c: In function ‘project_clear_one’:
lfs_project.c:258:17: error: ‘strncpy’ output may be truncated copying 255 bytes from a string of length 255 [-Werror=stringop-truncation]
  258 |                 strncpy(lp.project_name, bname, NAME_MAX);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
lfs_project.c: In function ‘project_set_one’:
lfs_project.c:219:17: error: ‘strncpy’ output may be truncated copying 255 bytes from a string of length 255 [-Werror=stringop-truncation]
  219 |                 strncpy(lp.project_name, bname, NAME_MAX);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Test-Parameters: trivial
Signed-off-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Change-Id: Ic09e5a70e9651ea6855d297c83932755a44e848e

--- Review History ---

--- Message (Arshad Hussain, 2026-03-05 11:02:16.000000000) ---
Uploaded patch set 1.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2026-03-05 11:05:05.000000000) ---
Patch Set 1:

Code-wise looks good to me.

--- Message (Lustre Gerrit Janitor, 2026-03-05 11:05:06.000000000) ---
Patch Set 1:

(1 comment)

Builds for x86_64 rocky8.10,rocky9.6 successful
Job output URL: https://testing.whamcloud.com/gerrit-janitor/60856/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs

--- Message (wc-checkpatch, 2026-03-05 11:10:38.000000000) ---
Patch Set 1:

(2 comments)

2 style warning(s).
For more details please see https://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Lustre Gerrit Janitor, 2026-03-05 11:14:21.000000000) ---
Patch Set 1:

Initial testing succeeded.

Succeeded:
- runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs 

(rocky8.10)All results and logs: https://testing.whamcloud.com/gerrit-janitor/60856/results.html
Commencing standard testing: 
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity4@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity4@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single1@ldiskfs+DNE replay-single2@ldiskfs+DNE replay-single1@zfs replay-single2@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity3@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity3@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs

--- Message (jenkins, 2026-03-05 11:29:56.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/122124/ : SUCCESS

--- Message (Maloo, 2026-03-05 11:33:40.000000000) ---
Patch Set 1:

#### The following sessions will be run for Build 122124 (patch #1):

#### Enforced:

- review-ldiskfs-dne on el8.10-x86_64/el8.10-x86_64/ldiskfs/ldiskfs

- review-ldiskfs-dne on el9.5-x86_64/el9.5-x86_64/ldiskfs/ldiskfs

- review-ldiskfs-dne-arm on el8.10-x86_64/rocky9.5-aarch64/ldiskfs/ldiskfs

---

Maloo Test Queue: https://testing.whamcloud.com/test_queue?jobs=lustre-reviews&builds=122124&commit=Apply+Filter

Maloo Results: https://testing.whamcloud.com/test_sessions/related?jobs=lustre-reviews&builds=122124#redirect

--- Message (Lustre Gerrit Janitor, 2026-03-05 14:50:36.000000000) ---
Patch Set 1:

Even though "Test-Parameters: trivial" was detected, this deeply suspicious bot still run some testing

Testing has completed with errors!

> racer@zfs Timeout(1510s)

Succeeded:
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity4@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity4@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@ldiskfs+DNE recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single1@ldiskfs+DNE replay-single2@ldiskfs+DNE replay-single1@zfs replay-single2@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity3@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity3@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs 

(rocky8.10)All results and logs: https://testing.whamcloud.com/gerrit-janitor/60856/results.html

--- Message (Maloo, 2026-03-05 16:28:16.000000000) ---
Patch Set 1: Verified+1

Passed enforced test review-ldiskfs-dne on RHEL 9.5 / x86_64 uploaded by Trevis Autotest from trevis-152vm45: https://testing.whamcloud.com/test_sessions/5b39bcb1-09bc-4d33-96c6-dffc637dde84 ran 5 tests.

--- Message (Arshad Hussain, 2026-03-23 10:00:03.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Andreas Dilger, 2026-03-25 11:22:57.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Andreas Dilger, 2026-03-30 23:38:14.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Chakshu Kansal, 2026-04-25 07:58:48.000000000) ---
Patch Set 1: Code-Review+1
